// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Card component it should render a placeholder 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 6,
      "marginHorizontal": 10,
      "marginVertical": 5,
      "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 17.28,
          }
        }
      />
      <View
        style={
          Object {
            "paddingVertical": 11.52,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingHorizontal": 20,
          "paddingTop": 5,
          "paddingVertical": 20,
        }
      }
    >
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 6,
            "borderWidth": 2,
            "elevation": 2,
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 20,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 23.04,
            }
          }
        >
          
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#17B582",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`the Card component should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 6,
      "marginHorizontal": 10,
      "marginVertical": 5,
      "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        Coffee
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 17.28,
          }
        }
      >
        noun
      </Text>
      <View
        style={
          Object {
            "paddingVertical": 11.52,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          A dark substance that turns "leave me alone" into "good morning!"
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingHorizontal": 20,
          "paddingTop": 5,
          "paddingVertical": 20,
        }
      }
    >
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 6,
            "borderWidth": 2,
            "elevation": 2,
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 20,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 23.04,
            }
          }
        >
          Learn More
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#17B582",
          }
        }
      >
        Share
      </Text>
    </View>
  </View>
</View>
`;
